# remoteDatabase

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  main.C  main.c
data/: playerData.csv  pullData.py
database/: database.c  database.h  databaseCreation.c  databaseCreation.h
python/: pullData.py
server/: serverCreate.py
server/core/: compiler.h  interface.c  interface.h
server/database/: database.c  database.h
server/startup/: dataCreation.h  main.c
startup/: dataCreation.h  databaseCreation.C
